--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -27,6 +27,7 @@
     var number_unassign_ticket = ApplicationDbContext.Ticket.Where(t => t.IsAssigned == false).ToList().Count;
     var number_new_ticket = ApplicationDbContext.Ticket.Where(t => t.Created >= currentTime.AddDays(-7)).ToList().Count;
     var number_resolve_ticket = ApplicationDbContext.Ticket.Where(t => t.StatusId == 5).Where(t => t.Updated >= currentTime.AddDays(-7)).ToList().Count;
+
 }
 <div class="container-fluid">
     <br />
@@ -51,11 +52,12 @@
             <div class="col">
                 <div class="card">
                     <div class="card-header bg-dark">
-                        <h5 class="card-title">Quick Inbox Action</h5>
+                        <h5 class="card-title">Quick Inbox and Notification Action</h5>
                     </div>
                     <div class="card-body">
                         <a asp-controller="Inboxes" asp-action="Create" class="btn btn-secondary pb-2 mb-2"><i class="fas fa-plus-square"></i> Compose New Inbox</a>
                         <a asp-controller="Inboxes" asp-action="Index" class="btn btn-secondary pb-2 mb-2"><i class="far fa-comments"></i> View My Inbox</a>
+                        <a asp-controller="Notifications" asp-action="Index" class="btn btn-secondary pb-2 mb-2"><i class="far fa-bell"></i> View My Notifications</a>
 
                     </div>
                 </div>
@@ -66,15 +68,16 @@
             <div class="col">
                 <div class="card">
                     <div class="card-header bg-dark">
-                        <h5 class="card-title">Quick Inbox Action</h5>
+                        <h5 class="card-title">Quick Inbox and Notification Action</h5>
                     </div>
                     <div class="card-body">
                         <a asp-controller="Inboxes" asp-action="Create" class="btn btn-secondary pb-2 mb-2"><i class="fas fa-plus-square"></i> Compose New Inbox</a>
                         <a asp-controller="Inboxes" asp-action="Index" class="btn btn-secondary pb-2 mb-2"><i class="far fa-comments"></i> View My Inbox</a>
-
+                        <a asp-controller="Notifications" asp-action="Index" class="btn btn-secondary pb-2 mb-2"><i class="far fa-bell"></i> View My Notifications</a>
                     </div>
                 </div>
             </div>
+
         }
     </div>
  
