--- a/Views/Tickets/Edit.cshtml
+++ b/Views/Tickets/Edit.cshtml
@@ -4,69 +4,82 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<br />
+<br />
+<br />
+<section class="content">
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col">
+            <form asp-action="Edit">
+                <div class="card card-primary">
+                    <div class="card-header">
+                        <h3 class="card-title">Edit Ticket</h3>
+                    </div>
+                    <div class="card-body">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <input type="hidden" asp-for="Id" />
+                        <div class="form-group">
+                            <label asp-for="Name" class="control-label"></label>
+                            <input asp-for="Name" class="form-control" />
+                            <span asp-validation-for="Name" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Description" class="control-label"></label>
+                            <input asp-for="Description" class="form-control" />
+                            <span asp-validation-for="Description" class="text-danger"></span>
+                        </div>
 
-<h4>Ticket</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
+                        <input type="hidden" asp-for="Created" class="form-control" />
+                        <div class="form-group form-check">
+                            <label class="form-check-label">
+                                <input class="form-check-input" asp-for="IsAssigned" /> @Html.DisplayNameFor(model => model.IsAssigned)
+                            </label>
+                        </div>
 
-            <input type="hidden" asp-for="Created" class="form-control" />
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsAssigned" /> @Html.DisplayNameFor(model => model.IsAssigned)
-                </label>
-            </div>
+                        <div class="form-group">
+                            <label asp-for="DeveloperId" class="control-label"></label>
+                            <select asp-for="DeveloperId" class="form-control" asp-items="ViewBag.DeveloperId"></select>
+                            <span asp-validation-for="DeveloperId" class="text-danger"></span>
+                        </div>
 
-            <div class="form-group">
-                <label asp-for="DeveloperId" class="control-label"></label>
-                <select asp-for="DeveloperId" class="form-control" asp-items="ViewBag.DeveloperId"></select>
-                <span asp-validation-for="DeveloperId" class="text-danger"></span>
-            </div>
+                        <input type="hidden" asp-for="OwnnerId" class="form-control" />
 
-            <input type="hidden" asp-for="OwnnerId" class="form-control" />
+                        <div class="form-group">
+                            <label asp-for="ProjectId" class="control-label"></label>
+                            <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
+                            <span asp-validation-for="ProjectId" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="StatusId" class="control-label"></label>
+                            <select asp-for="StatusId" class="form-control" asp-items="ViewBag.StatusId"></select>
+                            <span asp-validation-for="StatusId" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="PriorityId" class="control-label"></label>
+                            <select asp-for="PriorityId" class="form-control" asp-items="ViewBag.PriorityId"></select>
+                            <span asp-validation-for="PriorityId" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="TicketTypeId" class="control-label"></label>
+                            <select asp-for="TicketTypeId" class="form-control" asp-items="ViewBag.TicketTypeId"></select>
+                            <span asp-validation-for="TicketTypeId" class="text-danger"></span>
+                        </div>
+                        
+                        <div class="form-group">
+                            <input type="submit" value="Save" class="btn btn-success float-left mr-2">
+                            <a  asp-action="Index" class="btn btn-secondary">Cancel</a>
+                        </div>
 
-            <div class="form-group">
-                <label asp-for="ProjectId" class="control-label"></label>
-                <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
-                <span asp-validation-for="ProjectId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="StatusId" class="control-label"></label>
-                <select asp-for="StatusId" class="form-control" asp-items="ViewBag.StatusId"></select>
-                <span asp-validation-for="StatusId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PriorityId" class="control-label"></label>
-                <select asp-for="PriorityId" class="form-control" asp-items="ViewBag.PriorityId"></select>
-                <span asp-validation-for="PriorityId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TicketTypeId" class="control-label"></label>
-                <select asp-for="TicketTypeId" class="form-control" asp-items="ViewBag.TicketTypeId"></select>
-                <span asp-validation-for="TicketTypeId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+                    </div>
+                    <!-- /.card-body -->
+                </div>
+                <!-- /.card -->
+            </form>
+        </div>
+        <div class="col-2"></div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+</section>
+
 
