--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -589,8 +589,8 @@
                 </main>
             </div>
         }
-            <footer class="footer text-muted text-center" style="border:none;">
-                <div class="container">
+            <footer class="footer text-muted text-center" style="border:none;background-color:#ffffff00">
+                <div class="container" style="border:none;background-color:#ffffff00">
                     &copy; 2021 - BugTracker - Made by <a href="https://duylanle-portfolio.netlify.app/" target="_blank">Duy Lan Le</a>
                 </div>
             </footer>
