--- a/Views/ProjectAttachments/Create.cshtml
+++ b/Views/ProjectAttachments/Create.cshtml
@@ -1,18 +1,17 @@
-﻿@model BugTracker.Models.Attachment
+﻿@model BugTracker.Models.ProjectAttachment
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
 }
 
-<h1>Edit</h1>
+<h1>Create</h1>
 
-<h4>Attachment</h4>
+<h4>ProjectAttachment</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
@@ -34,17 +33,15 @@
                 <span asp-validation-for="FileData" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TicketId" class="control-label"></label>
-                <select asp-for="TicketId" class="form-control" asp-items="ViewBag.TicketId"></select>
-                <span asp-validation-for="TicketId" class="text-danger"></span>
+                <label asp-for="ProjectId" class="control-label"></label>
+                <select asp-for="ProjectId" class ="form-control" asp-items="ViewBag.ProjectId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="CustomUserId" class="control-label"></label>
-                <input asp-for="CustomUserId" class="form-control" />
-                <span asp-validation-for="CustomUserId" class="text-danger"></span>
+                <select asp-for="CustomUserId" class ="form-control" asp-items="ViewBag.CustomUserId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -54,6 +51,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
