--- a/Views/ProjectAttachments/Delete.cshtml
+++ b/Views/ProjectAttachments/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model BugTracker.Models.Attachment
+﻿@model BugTracker.Models.ProjectAttachment
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Attachment</h4>
+    <h4>ProjectAttachment</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -36,17 +36,17 @@
             @Html.DisplayFor(model => model.FileData)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Ticket)
+            @Html.DisplayNameFor(model => model.Project)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Ticket.Id)
+            @Html.DisplayFor(model => model.Project.Id)
         </dd class>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CustomUserId)
+            @Html.DisplayNameFor(model => model.CustomUser)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CustomUserId)
-        </dd>
+            @Html.DisplayFor(model => model.CustomUser.Id)
+        </dd class>
     </dl>
     
     <form asp-action="Delete">
