--- a/Views/ProjectAttachments/Edit.cshtml
+++ b/Views/ProjectAttachments/Edit.cshtml
@@ -1,17 +1,18 @@
-﻿@model BugTracker.Models.Attachment
+﻿@model BugTracker.Models.ProjectAttachment
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
-<h4>Attachment</h4>
+<h4>ProjectAttachment</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
@@ -33,16 +34,17 @@
                 <span asp-validation-for="FileData" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TicketId" class="control-label"></label>
-                <select asp-for="TicketId" class ="form-control" asp-items="ViewBag.TicketId"></select>
+                <label asp-for="ProjectId" class="control-label"></label>
+                <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
+                <span asp-validation-for="ProjectId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CustomUserId" class="control-label"></label>
-                <input asp-for="CustomUserId" class="form-control" />
+                <select asp-for="CustomUserId" class="form-control" asp-items="ViewBag.CustomUserId"></select>
                 <span asp-validation-for="CustomUserId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -52,6 +54,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
